--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcAO1YZb_QSUCKQ2qrHaLL5k6pHe8Uis0"></script>
+<!--      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcAO1YZb_QSUCKQ2qrHaLL5k6pHe8Uis0&callback=initMap"></script>-->
   </head>
   <body>
     <noscript>
@@ -13,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
